implementacion de la logica de onIncompatibilityAdded()